@@ -6,6 +6,7 @@ Adjust padding in table columns
 Adding onclicks to table rows for Sector / Donor
 Fix High flava tables
 Fix hover state for cursors
+Fix stats table on main page
 
 
 Dashboard (2014-08-05 shi)
